# mgba-rs

./: Cargo.toml  README.md
mgba/: Cargo.toml  README.md
mgba-sys/: Cargo.toml  README.md  build.rs  wrapper.h
mgba-sys/mgba/: README.md
mgba-sys/mgba/src/gb/: CMakeLists.txt
mgba-sys/mgba/src/sm83/: CMakeLists.txt
mgba/src/: lib.rs
