[package]
name = "mgba-sys"
version = "0.1.0"
edition = "2021"
license = "MIT AND MPL-2.0"
description = "Raw FFI bindings to libmgba (GBA emulator core)"
repository = "https://github.com/ocnc/mgba-rs"
keywords = ["gba", "emulation", "ffi", "mgba"]
categories = ["external-ffi-bindings", "emulators"]
readme = "README.md"

[build-dependencies]
cmake = "0.1"
bindgen = "0.71"
